feat: add yudao-module-monitor with Kalman filter and anomaly detection